--- a/custom_components/gardena_smart_cloudless/manifest.json
+++ b/custom_components/gardena_smart_cloudless/manifest.json
@@ -4,8 +4,12 @@
   "version": "0.1.0",
   "documentation": "",
   "config_flow": true,
-  "requirements": ["websockets>=11.0"],
-  "codeowners": [],
+  "documentation": "https://github.com/cloudless-garden/py-gardena-smart-system-local-poc",
   "iot_class": "local_push",
+  "requirements": [
+    "pydantic>=2.12.0",
+    "websockets>=14.0",
+    "PyYAML>=6.0"
+  ],
   "zeroconf": ["_gardena-smart._tcp.local."]
 }
